src/extensions/advanced-controls/styles/editor.scss
.editor-styles-wrapper{
	.wp-block.editor-block-list__block[data-no-top-margin="1"]:not(:first-child) {
		margin-top: 0 !important;

		// Ensure that blocks with custom margin settings using our dimensions control
		// are forced to display without margin.
		[class*="wp-block-"] {
			&.has-margin {
				margin-top: 0 !important;
			}
		}

		.editor-block-list__block-edit {
			margin-top: 0 !important;
		}
		
	}

	.wp-block.editor-block-list__block[data-no-bottom-margin="1"]:not(:last-child) {
		margin-bottom: 0 !important;

		// Ensure that blocks with custom margin settings using our dimensions control
		// are forced to display without margin.
		[class*="wp-block-"] {
			&.has-margin {
				margin-bottom: 0 !important;
			}
		}

		.editor-block-list__block-edit {
			margin-bottom: 0 !important;
		}

		// Hide the inserter on blocks that follow a vertically resizable block
		// that does not have margin bottom applied.
		&[data-type="coblocks/map"] {
			+ .editor-block-list__block[data-no-bottom-margin="1"] {
				> .editor-block-list__insertion-point {
					display: none;
				}
			}
		}
	}

}

